--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -1,7 +1,8 @@
 **/*.go {
     #prep: go test -v -run TestBitString ./internal/bitbuf/
     #prep: go run cmd/fq/main.go ~/Downloads/radiolab043013.mp3
-    prep: go run cmd/fq/main.go test.mp3
+    #prep: go run cmd/fq/main.go test.mp3
+    prep: go run cmd/fq/main.go -f jpeg ~/Downloads/test.jpg
 
 }
 
