--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -2,7 +2,7 @@
     #prep: go test -v -run TestBitString ./internal/bitbuf/
     #prep: go run cmd/fq/main.go ~/Downloads/radiolab043013.mp3
     #prep: go run cmd/fq/main.go test.mp3
-    prep: go run cmd/fq/main.go -f jpeg ~/Downloads/test.jpg
-
+    #prep: go run cmd/fq/main.go -f jpeg ~/Downloads/test.jpg
+    prep: go run cmd/fq/main.go "$HOME/Downloads/04. isan - comb.mp3" header.APIC.picture 2>&1 | head -20
 }
 
