--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -4,6 +4,7 @@
     #prep: go run cmd/fq/main.go test.mp3
     #prep: go run cmd/fq/main.go -f jpeg ~/Downloads/test.jpg
     #prep: go run cmd/fq/main.go "$HOME/Downloads/04. isan - comb.mp3" header.APIC.picture 2>&1 | head -20
-    prep: go run cmd/fq/main.go test.png  chunk[6].exif.ifd.ifd[15]
+    #prep: go run cmd/fq/main.go test.png  chunk[6].exif.ifd.ifd[15]
+    prep: go run cmd/fq/main.go d392744d-9433-40f3-b63a-ece23a506a0e.tiff ifd.ifd[21].values.icc.tag_table.table.element[1]
 }
 
