--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -1,4 +1,4 @@
-**/*.go, **/*.jq {
+**/*.go {
     #prep: go test -v -run TestBitString ./internal/bitbuf/
     #prep: go run cmd/fq/main.go ~/Downloads/radiolab043013.mp3
     #prep: go run cmd/fq/main.go test.mp3
@@ -6,6 +6,7 @@
     #prep: go run cmd/fq/main.go "$HOME/Downloads/04. isan - comb.mp3" header.APIC.picture 2>&1 | head -20
     #prep: go run cmd/fq/main.go test.png  chunk[6].exif.ifd.ifd[15]
     #prep: go run cmd/fq/main.go d392744d-9433-40f3-b63a-ece23a506a0e.tiff ifd.ifd[21].values.icc.tag_table.table.element[1]
-    prep: GOJQ_DEBUG=1 go run cmd/fq/main.go -v -f jq test.mp3
+    #prep: GOJQ_DEBUG=1 go run cmd/fq/main.go -v -f jq test.mp3
+    prep: go run cmd/fq/main.go -f mkv ~/Downloads/Big_Buck_Bunny_1080_10s_10MB.webm
 }
 
