--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -7,6 +7,7 @@
     #prep: go run cmd/fq/main.go test.png  chunk[6].exif.ifd.ifd[15]
     #prep: go run cmd/fq/main.go d392744d-9433-40f3-b63a-ece23a506a0e.tiff ifd.ifd[21].values.icc.tag_table.table.element[1]
     #prep: GOJQ_DEBUG=1 go run cmd/fq/main.go -v -f jq test.mp3
-    prep: go run cmd/fq/main.go -f mkv ~/Downloads/Big_Buck_Bunny_1080_10s_10MB.webm
+    #prep: go run cmd/fq/main.go -f mkv ~/Downloads/Big_Buck_Bunny_1080_10s_10MB.webm
+    prep: go test -timeout 30s fq/internal/hexdump -run ^TestHexdumper$ -v
 }
 
