--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -9,6 +9,13 @@
     #prep: GOJQ_DEBUG=1 go run cmd/fq/main.go -v -f jq test.mp3
     #prep: go run cmd/fq/main.go -f mkv ~/Downloads/Big_Buck_Bunny_1080_10s_10MB.webm
     #prep: go test -timeout 30s fq/internal/hexdump -run ^TestHexdumper$ -v
-    prep: go run cmd/fq/main.go -f mkv -d 100 ~/Downloads/lasermannen/test.mkv '.. | select(._description=="mpeg_spu")'
+    #prep: go run cmd/fq/main.go -f mkv -d 100 ~/Downloads/lasermannen/test.mkv '.. | select(._description=="mpeg_spu")'
+
+
+    prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
+
 }
 
+_dev/wasmtest/main.wasm {
+    daemon: devd -m -a -p 8080 _dev/wasmtest
+}
