--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -12,8 +12,8 @@
     #prep: go run cmd/fq/main.go -f mkv -d 100 ~/Downloads/lasermannen/test.mkv '.. | select(._description=="mpeg_spu")'
 
 
-    prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
-
+    #prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
+    prep: go run cmd/fq/main.go -f gzip test.ogg.tar.gz d
 }
 
 _dev/wasmtest/main.wasm {
