--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -1,4 +1,4 @@
-**/*.go {
+**/*.go **/*.jq {
     #prep: go test -v -run TestBitString ./internal/bitbuf/
     #prep: go run cmd/fq/main.go ~/Downloads/radiolab043013.mp3
     #prep: go run cmd/fq/main.go test.mp3
@@ -13,7 +13,8 @@
 
 
     #prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
-    prep: go run cmd/fq/main.go -f gzip test.ogg.tar.gz d
+    #prep: go run cmd/fq/main.go -f gzip test.ogg.tar.gz d
+    prep: PATH=$PWD:$PATH ./test.jq -i testfiles/test.wav
 }
 
 _dev/wasmtest/main.wasm {
