--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -17,7 +17,9 @@
     #prep: PATH=$PWD:$PATH ./test.jq -i testfiles/test.wav
     
 
-    prep: fq -s test.jq
+    #prep: fq -s test.jq
+
+    prep: HELLO="hello $USER" sh -c 'echo $HELLO'
 }
 
 _dev/wasmtest/main.wasm {
