--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -12,14 +12,15 @@
     #prep: go run cmd/fq/main.go -f mkv -d 100 ~/Downloads/lasermannen/test.mkv '.. | select(._description=="mpeg_spu")'
 
 
-    #prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
     #prep: go run cmd/fq/main.go -f gzip test.ogg.tar.gz d
     #prep: PATH=$PWD:$PATH ./test.jq -i testfiles/test.wav
     
 
     #prep: fq -s test.jq
 
-    prep: HELLO="hello $USER" sh -c 'echo $HELLO'
+    prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
+
+
 }
 
 _dev/wasmtest/main.wasm {
