--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -18,7 +18,7 @@
 
     #prep: fq -s test.jq
 
-    #prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
+    prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
 
 
 }
