--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -16,7 +16,7 @@
     #prep: PATH=$PWD:$PATH ./test.jq -i testfiles/test.wav
     
 
-    #prep: fq -s test.jq
+    #prep: fq -f test.jq
 
     prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
 
