--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -18,11 +18,14 @@
 
     #prep: fq -f test.jq
 
-    prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
-
-
+    #prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
 }
 
-_dev/wasmtest/main.wasm {
-    daemon: devd -m -a -p 8080 _dev/wasmtest
+
+**/*.json **/*.tmpl {
+    prep: make generate
 }
+
+# _dev/wasmtest/main.wasm {
+#     daemon: devd -m -a -p 8080 _dev/wasmtest
+# }
