--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -19,12 +19,14 @@
     #prep: fq -f test.jq
 
     #prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
+
+    prep: go run cmd/fq/main.go  -h
 }
 
 
-**/*.json **/*.tmpl {
-    prep: make generate
-}
+# **/*.json **/*.tmpl {
+#     prep: make generate
+# }
 
 # _dev/wasmtest/main.wasm {
 #     daemon: devd -m -a -p 8080 _dev/wasmtest
