--- a/_dev/modd.conf
+++ b/_dev/modd.conf
@@ -18,9 +18,9 @@
 
     #prep: fq -f test.jq
 
-    #prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
+    prep: GOOS=js GOARCH=wasm go build -o _dev/wasmtest/main.wasm cmd/web/web.go
 
-    prep: go run cmd/fq/main.go  -h
+    #prep: go run cmd/fq/main.go  -h
 }
 
 
@@ -28,6 +28,6 @@
 #     prep: make generate
 # }
 
-# _dev/wasmtest/main.wasm {
-#     daemon: devd -m -a -p 8080 _dev/wasmtest
-# }
+_dev/wasmtest/main.wasm {
+    daemon: devd -m -a -p 8080 _dev/wasmtest
+}
