--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "ctxstack",
         "demuxed",
         "descr",
+        "elif",
         "endians",
         "fpbits",
         "fqtest",
@@ -41,6 +42,7 @@
         "pcap",
         "pmezard",
         "randomised",
+        "rpad",
         "sels",
         "shquote",
         "syncmapl",
