--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Arity",
         "CCIT",
         "Exif",
+        "HEIC",
         "HEVC",
         "IEND",
         "IHDR",
@@ -23,18 +24,31 @@
         "descr",
         "elif",
         "endians",
+        "esds",
         "fpbits",
         "fqtest",
         "ftyp",
         "gofmt",
         "goinsane",
         "gojq",
+        "iinf",
+        "iloc",
+        "ilst",
         "inband",
+        "infe",
         "ioextra",
+        "ipco",
+        "iprp",
         "itchyny",
         "libavformat",
         "luma",
         "matroska",
+        "mfhd",
+        "mfra",
+        "mfro",
+        "moof",
+        "moov",
+        "mvex",
         "nals",
         "nalus",
         "obus",
@@ -45,9 +59,21 @@
         "rpad",
         "sels",
         "shquote",
+        "sidx",
+        "stco",
         "struct",
+        "stsc",
+        "stsz",
+        "stts",
         "syncmapl",
+        "tfdt",
+        "tfhd",
+        "tfra",
         "tmpl",
+        "traf",
+        "trex",
+        "trun",
+        "udta",
         "ufffd",
         "xrange"
     ],
