--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "iprp",
         "itchyny",
         "libavformat",
+        "localizable",
         "luma",
         "matroska",
         "mfhd",
