--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
         "origptr",
         "pcap",
         "pmezard",
+        "protobuf",
         "randomised",
         "rpad",
         "sels",
