--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,12 +22,14 @@
         "ctxstack",
         "demuxed",
         "descr",
+        "dumpaddr",
         "elif",
         "endians",
         "esds",
         "fpbits",
         "fqtest",
         "ftyp",
+        "funcs",
         "gofmt",
         "gojq",
         "iinf",
@@ -55,6 +57,7 @@
         "origptr",
         "pcap",
         "pmezard",
+        "println",
         "protobuf",
         "randomised",
         "rpad",
