--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,11 @@
         "AACSSR",
         "APETAGEX",
         "APEV",
+        "APIC",
         "Arity",
         "CCIT",
         "Exif",
+        "GOPATH",
         "HEIC",
         "HEVC",
         "IEND",
@@ -15,9 +17,11 @@
         "Packetized",
         "RDBs",
         "SMPTE",
+        "TSSE",
         "Unsychronized",
         "WEBP",
         "Xiph",
+        "bzip",
         "ctxreadseeker",
         "ctxstack",
         "demuxed",
@@ -52,6 +56,7 @@
         "moov",
         "mvex",
         "nals",
+        "nalu",
         "nalus",
         "obus",
         "origptr",
@@ -65,8 +70,10 @@
         "shquote",
         "sidx",
         "stco",
+        "stedolan",
         "struct",
         "stsc",
+        "stsd",
         "stsz",
         "stts",
         "syncmapl",
