--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,8 @@
         "WEBP",
         "Xiph",
         "bzip",
+        "coef",
+        "colorjson",
         "ctxreadseeker",
         "ctxstack",
         "demuxed",
@@ -36,11 +38,13 @@
         "funcs",
         "gofmt",
         "gojq",
+        "gosimple",
         "iinf",
         "iloc",
         "ilst",
         "inband",
         "infe",
+        "interp",
         "ioextra",
         "ipco",
         "iprp",
@@ -72,6 +76,7 @@
         "stco",
         "stedolan",
         "struct",
+        "structcheck",
         "stsc",
         "stsd",
         "stsz",
@@ -91,5 +96,5 @@
     ],
     "editor.formatOnSave": true,
     "cSpell.allowCompoundWords": true,
-    "cSpell.enabled": true
+    "cSpell.enabled": true,
 }
