--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "RDBs",
         "SMPTE",
         "TSSE",
+        "Uinteger",
         "Unsychronized",
         "WEBP",
         "Xiph",
