--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
         "fqtest",
         "ftyp",
         "funcs",
+        "goarch",
         "gofmt",
         "gojq",
         "gosimple",
@@ -50,6 +51,7 @@
         "ipco",
         "iprp",
         "itchyny",
+        "ldflags",
         "libavformat",
         "localizable",
         "luma",
