--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,10 +17,11 @@ builds:
     flags:
       - -trimpath
     ldflags:
+      # omit symbol table and debug information
       - -s -w
       - -X main.version={{.Version}}
       - -X main.commit={{.Commit}}
-      - -X main.date={{ .CommitDate }}
+      - -X main.date={{.CommitDate}}
       - -X main.builtBy=goreleaser
 checksum:
   name_template: 'checksums.txt'
@@ -35,7 +36,7 @@ archives:
     darwin: macos
 
 snapshot:
-  name_template: "{{ .Tag }}-next"
+  name_template: "{{.Tag}}-next"
 
 changelog:
   sort: asc
