--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci
+name: CI
 
 on:
   push:
@@ -6,24 +6,19 @@ on:
       - 'master'
   pull_request:
 
-permissions:
-  contents: write
-
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      -
-        name: Set up Go
+      - name: Setup go
         uses: actions/setup-go@v2
         with:
           go-version: 1.16
-      -
-        name: Tests
-        run: |
-          make test
+      - name: Lint
+        uses: golangci/golangci-lint-action@v2
+      - name: Test
+        run: make test
