--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,23 +5,33 @@
         "APEV",
         "APIC",
         "Arity",
+        "BCDU",
         "CCIT",
+        "CLLID",
+        "Equalisation",
         "Exif",
+        "FALLID",
         "GOPATH",
         "HEIC",
         "HEVC",
+        "Horz",
+        "IDID",
         "IEND",
         "IHDR",
         "Linearization",
         "MJPEG",
         "Packetized",
         "RDBs",
+        "RELA",
         "SMPTE",
         "TSSE",
+        "UIDID",
+        "UTCID",
         "Uinteger",
         "Unsychronized",
         "WEBP",
         "Xiph",
+        "acsp",
         "bzip",
         "coef",
         "colorjson",
@@ -39,7 +49,9 @@
         "funcs",
         "goarch",
         "gofmt",
+        "goimports",
         "gojq",
+        "golangci",
         "gosimple",
         "iinf",
         "iloc",
@@ -65,6 +77,8 @@
         "nals",
         "nalu",
         "nalus",
+        "noctx",
+        "nolint",
         "obus",
         "origptr",
         "pcap",
@@ -84,6 +98,7 @@
         "stsd",
         "stsz",
         "stts",
+        "synchronisation",
         "syncmapl",
         "tfdt",
         "tfhd",
@@ -95,6 +110,8 @@
         "trun",
         "udta",
         "ufffd",
+        "unconvert",
+        "unparam",
         "xrange"
     ],
     "editor.formatOnSave": true,
