--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "CLLID",
         "Equalisation",
         "Exif",
+        "Exiter",
         "FALLID",
         "GOPATH",
         "HEIC",
@@ -20,6 +21,7 @@
         "IHDR",
         "Linearization",
         "MJPEG",
+        "OSFS",
         "Packetized",
         "RDBs",
         "RELA",
@@ -33,6 +35,7 @@
         "Xiph",
         "acsp",
         "bzip",
+        "chzyer",
         "coef",
         "colorjson",
         "ctxreadseeker",
