--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "interp",
         "ioextra",
         "ipco",
+        "iprint",
         "iprp",
         "itchyny",
         "ldflags",
