--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,6 +91,7 @@
         "println",
         "protobuf",
         "randomised",
+        "recoverfn",
         "rpad",
         "sels",
         "shquote",
