--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "CCIT",
         "CLLID",
         "Equalisation",
+        "Errorer",
         "Exif",
         "Exiter",
         "FALLID",
