--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
         "chzyer",
         "coef",
         "colorjson",
+        "cpus",
         "ctxreadseeker",
         "ctxstack",
         "demuxed",
