--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
         "gofmt",
         "goimports",
         "gojq",
+        "gojqextra",
         "golangci",
         "gosec",
         "gosimple",
