cli: Include paths and some refactor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,7 @@
         "dumpaddr",
         "elif",
         "endians",
+        "errorln",
         "esds",
         "fpbits",
         "fqtest",
@@ -60,6 +61,7 @@
         "golangci",
         "gosec",
         "gosimple",
+        "gsub",
         "iinf",
         "iloc",
         "ilst",
