cli: Refactor options code
Make nearly all options be just options and cli arguments
just sets various options.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -116,6 +116,7 @@
         "tfra",
         "tmpl",
         "toimage",
+        "tojson",
         "tojvalue",
         "tovalue",
         "traf",
