cli: Move help/0 to inter.jq, better help for -n

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -115,6 +115,8 @@
         "tfhd",
         "tfra",
         "tmpl",
+        "toboolean",
+        "tobytes",
         "toimage",
         "tojson",
         "tojvalue",
