gojq: Update gojq fq fork

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "Arity",
         "BCDU",
         "CCIT",
+        "CLICOLOR",
+        "CLIUNICODE",
         "CLLID",
         "Equalisation",
         "Errorer",
@@ -35,6 +37,7 @@
         "WEBP",
         "Xiph",
         "acsp",
+        "addrbase",
         "bzip",
         "chzyer",
         "coef",
@@ -98,6 +101,7 @@
         "randomised",
         "recoverfn",
         "rpad",
+        "rtrimstr",
         "sels",
         "shquote",
         "sidx",
