cli: Make --raw-string work with input/0 and inputs/0
Also lots of refactor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -119,6 +119,7 @@
         "tfhd",
         "tfra",
         "tmpl",
+        "toarray",
         "toboolean",
         "tobytes",
         "toimage",
