decode: Use golang.org/x/text for text decoding

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,45 +1,19 @@
 {
     "cSpell.words": [
         "AACSSR",
+        "acsp",
+        "addrbase",
         "APETAGEX",
         "APEV",
         "APIC",
         "Arity",
         "BCDU",
+        "bzip",
         "CCIT",
+        "chzyer",
         "CLICOLOR",
         "CLIUNICODE",
         "CLLID",
-        "Equalisation",
-        "Errorer",
-        "Exif",
-        "Exiter",
-        "FALLID",
-        "GOPATH",
-        "HEIC",
-        "HEVC",
-        "Horz",
-        "IDID",
-        "IEND",
-        "IHDR",
-        "Linearization",
-        "MJPEG",
-        "OSFS",
-        "Packetized",
-        "RDBs",
-        "RELA",
-        "SMPTE",
-        "TSSE",
-        "UIDID",
-        "UTCID",
-        "Uinteger",
-        "Unsychronized",
-        "WEBP",
-        "Xiph",
-        "acsp",
-        "addrbase",
-        "bzip",
-        "chzyer",
         "coef",
         "colorjson",
         "cpus",
@@ -50,8 +24,13 @@
         "dumpaddr",
         "elif",
         "endians",
+        "Equalisation",
+        "Errorer",
         "errorln",
         "esds",
+        "Exif",
+        "Exiter",
+        "FALLID",
         "fpbits",
         "fqtest",
         "ftyp",
@@ -62,9 +41,16 @@
         "gojq",
         "gojqextra",
         "golangci",
+        "GOPATH",
         "gosec",
         "gosimple",
         "gsub",
+        "HEIC",
+        "HEVC",
+        "Horz",
+        "IDID",
+        "IEND",
+        "IHDR",
         "iinf",
         "iloc",
         "ilst",
@@ -78,12 +64,14 @@
         "itchyny",
         "ldflags",
         "libavformat",
+        "Linearization",
         "localizable",
         "luma",
         "matroska",
         "mfhd",
         "mfra",
         "mfro",
+        "MJPEG",
         "moof",
         "moov",
         "mvex",
@@ -94,17 +82,23 @@
         "nolint",
         "obus",
         "origptr",
+        "OSFS",
+        "Packetized",
         "pcap",
         "pmezard",
         "println",
         "protobuf",
+        "PSSH",
         "randomised",
+        "RDBs",
         "recoverfn",
+        "RELA",
         "rpad",
         "rtrimstr",
         "sels",
         "shquote",
         "sidx",
+        "SMPTE",
         "stco",
         "stedolan",
         "struct",
@@ -129,10 +123,17 @@
         "traf",
         "trex",
         "trun",
+        "TSSE",
         "udta",
         "ufffd",
+        "UIDID",
+        "Uinteger",
         "unconvert",
         "unparam",
+        "Unsychronized",
+        "UTCID",
+        "WEBP",
+        "Xiph",
         "xrange"
     ],
     "editor.formatOnSave": true,
