cli: Implement --arg, --argjson and --rawfile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -139,4 +139,5 @@
     "editor.formatOnSave": true,
     "cSpell.allowCompoundWords": true,
     "cSpell.enabled": true,
+    "files.trimTrailingWhitespace": true,
 }
