--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
+      - name: Install expect
+        run: sudo apt-get install expect
       - name: Checkout
         uses: actions/checkout@v2
         with:
