Add *grep/1/2 and find/1/2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "APIC",
         "Arity",
         "BCDU",
+        "bgrep",
         "bzip",
         "CCIT",
         "chzyer",
@@ -15,6 +16,7 @@
         "CLLID",
         "coef",
         "colorjson",
+        "cond",
         "cpus",
         "ctxreadseeker",
         "ctxstack",
@@ -30,6 +32,7 @@
         "Exif",
         "Exiter",
         "FALLID",
+        "fgrep",
         "fpbits",
         "fqtest",
         "ftyp",
@@ -60,6 +63,7 @@
         "ipco",
         "iprint",
         "iprp",
+        "isempty",
         "itchyny",
         "ldflags",
         "libavformat",
@@ -131,6 +135,7 @@
         "unparam",
         "Unsychronized",
         "UTCID",
+        "vgrep",
         "WEBP",
         "Xiph",
         "xrange"
