--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,7 @@
 linters:
   enable:
+    - revive
+    - errname
     - goimports
     - nilerr
     - forcetypeassert
@@ -33,4 +35,3 @@ linters-settings:
       # allow md5
       - G401
       - G501
-  unused:
