--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,16 +24,16 @@ builds:
       - -X main.date={{.CommitDate}}
       - -X main.builtBy=goreleaser
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 
 archives:
-- files:
-  - none*
-  format_overrides:
-    - goos: windows
-      format: zip
-  replacements:
-    darwin: macos
+  - files:
+      - none*
+    format_overrides:
+      - goos: windows
+        format: zip
+    replacements:
+      darwin: macos
 
 snapshot:
   name_template: "{{.Tag}}-next"
@@ -42,8 +42,8 @@ changelog:
   sort: asc
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
+      - "^docs:"
+      - "^test:"
 
 brews:
   - tap:
