--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
         "CLIUNICODE",
         "CLLID",
         "coef",
+        "coeff",
+        "Coeffs",
         "colorjson",
         "cond",
         "cpus",
@@ -71,6 +73,7 @@
         "localizable",
         "luma",
         "matroska",
+        "metadatablocsk",
         "mfhd",
         "mfra",
         "mfro",
