interp: Rework repl prompt code and fix some whitespace issues again

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -146,5 +146,7 @@
     "editor.formatOnSave": true,
     "cSpell.allowCompoundWords": true,
     "cSpell.enabled": true,
-    "files.trimTrailingWhitespace": true,
+    "[plaintext]": {
+        "files.trimTrailingWhitespace": false,
+    },
 }
