doc: Fix typos and old examples

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,14 @@
         "AACSSR",
         "acsp",
         "addrbase",
+        "annexb",
         "APETAGEX",
         "APEV",
         "APIC",
         "Arity",
         "BCDU",
         "bgrep",
+        "bxor",
         "bzip",
         "CCIT",
         "chzyer",
@@ -122,6 +124,7 @@
         "toarray",
         "toboolean",
         "tobytes",
+        "tobytesrange",
         "toimage",
         "tojson",
         "tojvalue",
