doc: Improved readme and cleanup todo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,6 +97,7 @@
         "OSFS",
         "Packetized",
         "pcap",
+        "pcapng",
         "pmezard",
         "println",
         "protobuf",
