vscode: Use tabsize 2 for jq files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -158,5 +158,8 @@
     "[plaintext]": {
         "files.trimTrailingWhitespace": false,
     },
+    "[jq]": {
+        "editor.tabSize": 2,
+    },
     "fracturedjsonvsc.MaxInlineLength": 160,
 }
