--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
         "Exiter",
         "FALLID",
         "fgrep",
+        "FLAC",
         "fpbits",
         "fqtest",
         "ftyp",
@@ -148,7 +149,9 @@
         "Unsychronized",
         "UTCID",
         "vgrep",
+        "Vorbis",
         "WEBP",
+        "xffff",
         "Xiph",
         "xrange"
     ],
