tiff: Fix endian typo and cleanup todos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,7 @@
         "Horz",
         "IDID",
         "IEND",
+        "ifds",
         "IHDR",
         "iinf",
         "iloc",
@@ -113,7 +114,9 @@
         "sfns",
         "shquote",
         "sidx",
+        "SLONG",
         "SMPTE",
+        "SRATIONAL",
         "stco",
         "stedolan",
         "struct",
