bson: Add decoder
Only supports basic types for now

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "BCDU",
         "bgrep",
         "bitio",
+        "bson",
         "bxor",
         "bzip",
         "CCIT",
@@ -138,6 +139,7 @@
         "toimage",
         "tojson",
         "tojvalue",
+        "torepr",
         "tovalue",
         "traf",
         "trex",
