pcapng,fuzz: Fix infinite loop by fatal error on block length <= 0
Also add dev/fuzzbytes.go tool to convert fuzz input to raw bytes

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -35,3 +35,9 @@ linters-settings:
       # allow md5
       - G401
       - G501
+issues:
+  exclude-rules:
+    - path: dev/.*\.go
+      linters:
+        # ignore main re-declared errors
+        - typecheck
