lint: Fix typeassert and case exhaustive warnings

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -30,6 +30,8 @@ linters-settings:
       - rela
       - equalisation
       - synchronisation
+  exhaustive:
+    default-signifies-exhaustive: true
   gosec:
     excludes:
       # allow md5
