--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,6 +23,11 @@ linters:
     - predeclared
     - tagliatelle
 
+run:
+  skip-dirs:
+    - dev
+    - doc
+
 linters-settings:
   misspell:
     ignore-words:
@@ -37,9 +42,3 @@ linters-settings:
       # allow md5
       - G401
       - G501
-issues:
-  exclude-rules:
-    - path: dev/.*\.go
-      linters:
-        # ignore main re-declared errors
-        - typecheck
