decode: Some cleanup
Fix PeekFind arg order

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "BCDU",
         "bgrep",
         "bitio",
+        "bitioextra",
         "bson",
         "bxor",
         "bzip",
@@ -103,6 +104,7 @@
         "pcap",
         "pcapng",
         "pmezard",
+        "printerrln",
         "println",
         "protobuf",
         "PSSH",
