repl,interp: Refactor repl and slurp
Now repl, slurp and help implemented using same query rewrite.
Include filename context in error if possible.
Add spew function that does opposite of slurp.
Start of help infra, not done or documented yet.
Show error pointer on parse error.
Rename internal eval to _eval and make eval be wrapper that
does rewrite and has various eror handling etc.
Nicer repl, slupr and help errors.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-# for windows: fqtest uses \n and asserts output so should be exact
+# for windows: fqtest, jq and json uses \n and uses it in output so must be exact
 *.fqtest eol=lf
-# for windows: there are fqtest using json that need to be exact
 *.json eol=lf
+*.jq eol=lf
