interp: Cleanup binary regexp overloading and add explode
Add explode for binary that explode into an array of the binary unit tobits
Remove scan_toend as it feels a bit weird and one can use tobytes | .[match(...):] instead
Some general cleanup also

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -171,6 +171,7 @@
     },
     "[jq]": {
         "editor.tabSize": 2,
+        "files.trimTrailingWhitespace": true
     },
     "fracturedjsonvsc.MaxInlineLength": 160,
 }
