--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,11 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/setup-go@v3
         with:
-          fetch-depth: 0
-      - name: Lint
-        uses: golangci/golangci-lint-action@v2
+          go-version: 1.17.7
+      - uses: actions/checkout@v3
+      - uses: golangci/golangci-lint-action@v3
         with:
           version: v${{ env.GOLANGCILINT_VERSION }}
 
@@ -45,12 +44,8 @@ jobs:
       - name: Install expect
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: sudo apt-get install expect
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Setup go
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
         with:
           go-version: 1.17.7
       - name: Test
