rtmp,amf0: Add decoders
Basic RTMP support, used via tcp_stream group (pcap etc) or manually.
Basic AMF0 support, mostly what is used in RTMP.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "cpus",
         "ctxreadseeker",
         "ctxstack",
+        "demux",
         "demuxed",
         "descr",
         "dumpaddr",
@@ -113,6 +114,7 @@
         "recoverfn",
         "RELA",
         "rpad",
+        "RTMP",
         "rtrimstr",
         "sels",
         "sfns",
