tcp: Split into client/server structs and add skipped_bytes and has_start/end per direction
Feels clenaer and removes _client/server field prefixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,7 @@
         "gojq",
         "gojqextra",
         "golangci",
+        "gopacket",
         "GOPATH",
         "gosec",
         "gosimple",
