dev: Cleanup some code to fix a bunch of new linter warnings

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -37,6 +37,7 @@ linters-settings:
             - equalisation
             - synchronisation
 run:
+    timeout: 5m
     skip-dirs:
         # allow md5
         - dev
