macho: Split into macho/macho_fat, fix offset issue and add string decoding
Split fat macho into own decoder macho_fat. This also fixes issue with section
offset etc not being correct as they are from the start of each embedded file.

Make all address and offset field be in hex.

Decode __cstring, __ustring and __cfstring sections.

Fix LC_ENCRYPTION_INFO_64 missing pading issue.

Skip ranging for __bss and __common as they dont have any data in the file.

Simplifed magic handling a bit and add symbols.

Simplified state struct field, had redudant struct.

--- a/format/macho/testdata/Makefile
+++ b/format/macho/testdata/Makefile
@@ -28,7 +28,7 @@ build_fat_targets:
 
 # build_fat creates a FAT binary from TARGET_X86 and TARGET_ARM
 # creates FAT binary $(OUTPUT) under $(DIR)
-build_fat: 
+build_fat:
 	lipo -create -output $(DIR)/$(OUTPUT) $(TARGET_X86) $(TARGET_ARM)
 
 libbbb.so: libbbb.o
@@ -50,4 +50,4 @@ all-platforms-actual:
 
 # generates or actualizes the test cases
 actual:
-	cd $(DIR) && echo $(TARGETS) | tr -s '[:blank:]' '\n' | grep -ivE '.*\.o$$' | xargs -I '{}' sh -c 'echo "$$ fq -d macho dv {}" > {}.fqtest && $(FQ) -d macho dv {} >> {}.fqtest'
+	cd $(DIR) && echo $(TARGETS) | tr -s '[:blank:]' '\n' | grep -ivE '.*\.o$$' | xargs -I '{}' sh -c 'echo "$$ fq dv {}" > {}.fqtest && $(FQ) -d macho dv {} >> {}.fqtest'
