add ULEB and SLEB to known words for spell check

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -134,6 +134,7 @@
         "sfns",
         "shquote",
         "sidx",
+        "SLEB",
         "SLONG",
         "SMPTE",
         "SRATIONAL",
@@ -170,6 +171,7 @@
         "ufffd",
         "UIDID",
         "Uinteger",
+        "ULEB",
         "unconvert",
         "unparam",
         "Unsychronized",
