--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -137,6 +137,7 @@
         "SLEB",
         "SLONG",
         "SMPTE",
+        "sortex",
         "SRATIONAL",
         "stco",
         "stedolan",
