generics: Use more from x/exp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -163,7 +163,10 @@
         "tojvalue",
         "torepr",
         "tovalue",
+        "toxml",
+        "toxmlentities",
         "traf",
+        "trak",
         "trex",
         "trun",
         "TSSE",
