--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,17 +27,17 @@ jobs:
         include:
           - os: ubuntu-latest
             goarch: amd64
-            go_test_race_flags: -race
+            test_target: test-race
           # build and test on 32 bit, does not support race
           - os: ubuntu-latest
             goarch: "386"
-            go_test_race_flags: ""
+            test_target: test
           - os: macos-latest
             goarch: amd64
-            go_test_race_flags: ""
+            test_target: test
           - os: windows-latest
             goarch: amd64
-            go_test_race_flags: ""
+            test_target: test
     runs-on: ${{ matrix.os }}
     steps:
       # only run cli binary tests on linux
@@ -51,5 +51,4 @@ jobs:
       - name: Test
         env:
           GOARCH: ${{ matrix.goarch }}
-          GO_TEST_RACE_FLAGS: ${{ matrix.go_test_race_flags }}
-        run: make test
+        run: make ${{ matrix.test_target }}
