interp: Make to{actual,sym} behave similar to tovalue
Before if you did toactual it behaved differently and even gave error for
a scalar that only had actual value set. Now both to{actal,sym} works
similar to tovalue but will force if actual or sym value should be used.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -154,14 +154,18 @@
         "tfhd",
         "tfra",
         "tmpl",
+        "toactual",
         "toarray",
         "toboolean",
         "tobytes",
         "tobytesrange",
+        "todescription",
         "toimage",
         "tojson",
         "tojvalue",
+        "topath",
         "torepr",
+        "tosym",
         "tovalue",
         "toxml",
         "toxmlentities",
