interp: Rename to/from<format> functions to to_/from_<format>
Feels less cluttered, easier to read and more consistent.

Still keep tovalue, tobytes etc that are more basic functions this
only renamed format related functions.
Also there is an exceptin for to/fromjson as it comes from jq.

Also fixes lots of spelling errors while reading thru.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -167,8 +167,8 @@
         "torepr",
         "tosym",
         "tovalue",
-        "toxml",
-        "toxmlentities",
+        "to_xml",
+        "to_xmlentities",
         "traf",
         "trak",
         "trex",
