--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.20.0
+          go-version: "1.20.0"
       - uses: goreleaser/goreleaser-action@v2
         with:
           distribution: goreleaser
