golangci-lint: Disable revive unused-parameter and update for new default config
unused-parameter disabled as i prefer to see the names
new default revive config seems to not warn about capital names

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,6 +25,10 @@ linters:
         - wastedassign
 
 linters-settings:
+    revive:
+        rules:
+            - name: unused-parameter
+              disabled: true
     exhaustive:
         default-signifies-exhaustive: true
     gosec:
