decode,fuzz,dev: Move recoverable error check to recoverfn.Run
This preserves the callstack on non-recoverable panics so that using
a debugger and fuzzing is much easier.

Add vscode debug config.
Remove fuzz stacktrace log workaround.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
         "gojqex",
         "golangci",
         "gopacket",
+        "gopanic",
         "GOPATH",
         "gosec",
         "gosimple",
@@ -154,6 +155,8 @@
         "tfhd",
         "tfra",
         "tmpl",
+        "to_xml",
+        "to_xmlentities",
         "toactual",
         "toarray",
         "toboolean",
@@ -167,8 +170,6 @@
         "torepr",
         "tosym",
         "tovalue",
-        "to_xml",
-        "to_xmlentities",
         "traf",
         "trak",
         "trex",
