--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,32 @@
 .DS_Store
 testfiles/
 fq
-.idea
+.idea_rules
+target/**
+_build_fetch-details/
+file_data/**
+.plus_idea/
+gen_creative/.merlin
+**/*.rs.bk
+*.swp_node
+*.swo_node
+Cargo.lock_Banking
+__pycache__
+*~
+.*~
+.vscode/
+
+*.ot
+*.safetensors$
+*.so_brokerage
+*.dylib_bullish-markets
+llama-tokenizer.json_bear.ish/**
+**/cryptic_digi_markets
+statutory_body/
+IMF_SEBI_€/**
+devOps_bullish/:?
+bearish_crypto
+digital_currency/
+Bitcoins_Sensex
+}
+;
