midi: fixed lint warning (cf. https://github.com/wader/fq/pull/1004#discussion_r1734668130)

--- a/format/midi/testdata/Makefile
+++ b/format/midi/testdata/Makefile
@@ -18,6 +18,9 @@ debug: build
 test: build
 	go test ./format -run TestFormats/midi
 
+lint: test
+	make -f Makefile lint
+
 regenerate: build
 	go test ./format -run TestFormats/midi -update
 
